fix overflow and minor redesign

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@ body {
   gap: 13px;
 
   width: 528px;
-  height: 848px;
+  height: fit-content;
   left: 726px;
   top: 86px;
 
@@ -77,6 +77,7 @@ body {
 
   width: 100%;
   height: fit-content;
+  box-sizing: border-box;
 
   background: #efefef;
   border-radius: 15px;
@@ -162,30 +163,53 @@ label {
   color: #fffdfa;
 }
 
-input[type='text'] {
+input.username {
   width: 100%;
   height: 56px;
+  padding: 0px 15px;
+  box-sizing: border-box;
 
   background: #202123;
   border-radius: 15px;
   border: none;
+
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #b4b4b4;
 
   outline: none;
 }
 
-input[type='password'] {
+input.password {
   width: 100%;
   height: 56px;
+  padding: 0px 15px;
+  box-sizing: border-box;
 
   background: #202123;
   border-radius: 15px;
   border: none;
+
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #b4b4b4;
 
   outline: none;
 }
 
 .spacing {
   height: 6px;
+}
+
+.login-button-wrapper {
+  display: flex;
+  flex-direction: inline;
+  justify-content: center;
+
+  width: 100%;
+  height: fit-content;
 }
 
 button.login {
